components templates setup and buttons flow through process

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
