--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react-redux",
+  "name": "CAD",
   "version": "0.2.0",
   "description": "React Redux using express",
   "main": "server/index.js",
@@ -12,7 +12,8 @@
   "babel": {
     "presets": [
       "env",
-      "react"
+      "react",
+      "stage-0"
     ]
   },
   "devDependencies": {
@@ -26,9 +27,24 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "webpack": "^3.11.0",
+    "sqlite3": "^4.0.2",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "body-parser": "^1.15.2",
+    "bcrypt": "^3.0.0",
+    "cors": "^2.8.3",
+    "dotenv": "^4.0.0",
+    "express-jwt": "^5.3.0",
+    "jsdom": "^11.0.0",
+    "jsonwebtoken": "^7.4.3",
+    "jsx-loader": "^0.13.2",
+    "jwt-decode": "^2.2.0",
+    "knex": "^0.13.0",
+    "passport": "^0.4.0",
+    "pg": "^6.2.3"
   }
 }
