--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "webpack": "^3.11.0",
     "sqlite3": "^4.0.2",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "express": "^4.16.2",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "body-parser": "^1.15.2",
     "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "jsdom": "^11.0.0",
     "jsonwebtoken": "^7.4.3",
@@ -45,6 +45,7 @@
     "jwt-decode": "^2.2.0",
     "knex": "^0.13.0",
     "passport": "^0.4.0",
-    "pg": "^6.2.3"
+    "pg": "^6.2.3",
+    "sodium": "^2.0.3"
   }
 }
